fixed html elements jump

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ input[type="number"] {
 
 .city {
   width: 250px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .CitySearch {
@@ -58,7 +58,7 @@ input[type="number"] {
   z-index: 2;
   align-self: center;
   margin: 0;
-  top: 58px;
+  top: 100px;
   font-size: 14px;
   box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
 }
@@ -77,6 +77,21 @@ input[type="number"] {
 
 .suggestions > li:hover {
   background-color: #bcdcdb;
+}
+
+.info-alert {
+  background-color: hsl(211, 66%, 90%);
+  border-radius: 10px;
+  padding: 5px 8px;
+  height: 50px;
+}
+
+.error-alert {
+  background-color: hsl(300, 76%, 94%);
+  border-radius: 10px;
+  padding: 5px 8px;
+  height: 50px;
+  max-width: 300px;
 }
 
 .event {
@@ -131,13 +146,7 @@ input[type="number"] {
   font-family: sans-serif;
 }
 
-.info-alert {
-  position: fixed;
-  top: 20px;
-  background-color: hsl(211, 47%, 75%);
-  border-radius: 10px;
-  padding: 5px 8px;
-}
+
 
 .data-vis-wrapper {
   display: flex;
@@ -204,9 +213,7 @@ input[type="number"] {
   font-family: "Roboto";
 }
 
-.infoAlert{
-  margin-top: 100px;
-}
+
 
 
 @media only screen and (min-width: 992px) {
